--- a/portfolio.html
+++ b/portfolio.html
@@ -27,14 +27,15 @@
         <!--navigation link-->
         <nav class="header-nav">
           <a href="./index.html" lang="en" class="brand-link link">
-            <span class="brand-text-onehalf">Web</span><span class="brand-text-twohalf">Studio</span>
+            <span class="brand-text-onehalf">Web</span
+            ><span class="brand-text-twohalf">Studio</span>
           </a>
           <ul class="header-list list">
             <li class="header-item">
               <a href="./index.html" class="header-link link">Студия</a>
             </li>
             <li class="header-item">
-              <a href="./portfolio.html" class="header-link header-curretlink link">Портфолио</a>
+              <a href="./portfolio.html" class="header-link header-currentlink link">Портфолио</a>
             </li>
             <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
           </ul>
@@ -86,12 +87,19 @@
           <ul class="gallery-list list">
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-1.jpg"
-                  alt="Технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-1.jpg"
+                    alt="Технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title">Технокряк</h2>
                   <p class="gallery-item-text">Веб-сайт</p>
@@ -100,12 +108,20 @@
             </li>
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-2.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-2.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ut quod
+                    necessitatibus laboriosam odio mollitia quisquam neque in, sed esse cum ducimus,
+                    sit fuga debitis, atque molestias ipsam corporis corrupti quas deserunt
+                    voluptates magni consequatur vero. Repellat ipsam vel saepe!
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -116,12 +132,21 @@
             </li>
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-3.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-3.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo perspiciatis facere
+                    magnam rem dignissimos maiores accusantium, officia ipsam sapiente, error
+                    aspernatur, dolores voluptatem molestias provident temporibus. Aperiam dolorum
+                    tempore expedita ea pariatur ad distinctio, at adipisci recusandae magni, odio
+                    consequuntur?
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="gallery-item-text">Приложение</p>
@@ -130,12 +155,18 @@
             </li>
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-4.jpg"
-                  alt="Проект Prime"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-4.jpg"
+                    alt="Проект Prime"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore optio
+                    dignissimos quo? Culpa, officia error?
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title">Проект <span lang="en">Prime</span></h2>
                   <p class="gallery-item-text">Маркетинг</p>
@@ -144,12 +175,17 @@
             </li>
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-5.jpg"
-                  alt="Проект Boxes"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-5.jpg"
+                    alt="Проект Boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, corporis.
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title">Проект <span lang="en">Boxes</span></h2>
                   <p class="gallery-item-text">Приложение</p>
@@ -158,12 +194,20 @@
             </li>
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-6.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-6.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia asperiores in
+                    voluptates voluptate rerum corporis nobis, harum qui deleniti molestias minus
+                    autem dolores perferendis atque dicta vel. Vero officiis rem a nulla ea
+                    doloribus animi.
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title">
                     <span lang="en">Inspiration has no Borders</span>
@@ -174,12 +218,19 @@
             </li>
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-7.jpg"
-                  alt="Издание Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-7.jpg"
+                    alt="Издание Limited Edition"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, cupiditate culpa
+                    dicta et consectetur perferendis quos, maiores officiis illo labore nostrum
+                    quasi molestiae voluptatibus tempore earum exercitationem pariatur enim dolorum.
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="gallery-item-text">Дизайн</p>
@@ -188,12 +239,19 @@
             </li>
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-8.jpg"
-                  alt="Проект LAB"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-8.jpg"
+                    alt="Проект LAB"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem
+                    consequuntur ipsam excepturi, fugiat cumque earum perspiciatis nihil
+                    necessitatibus vel ratione!
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title">Проект <span lang="en">LAB</span></h2>
                   <p class="gallery-item-text">Маркетинг</p>
@@ -202,12 +260,17 @@
             </li>
             <li class="gallery-item">
               <a href="" class="gallery-link link">
-                <img
-                  src="./images/gallery/portfolio-gallery-9.jpg"
-                  alt="Growing Business"
-                  width="370"
-                  height="294"
-                />
+                <div class="gallery-item-slide">
+                  <img
+                    src="./images/gallery/portfolio-gallery-9.jpg"
+                    alt="Growing Business"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="gallery-item-about">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere, nesciunt!
+                  </p>
+                </div>
                 <div class="gallery-item-content">
                   <h2 class="gallery-item-title"><span lang="en">Growing Business</span></h2>
                   <p class="gallery-item-text">Приложение</p>
