--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a href="./index.html" class="header-link header-curretlink link">Студия</a>
+              <a href="./index.html" class="header-link header-currentlink link">Студия</a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link link">Портфолио</a>
@@ -64,7 +64,7 @@
       <section class="tagline section">
         <div class="container">
           <h1 class="tagline-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="tagline-btn">Заказать услугу</button>
+          <button type="button" class="tagline-btn" data-modal-open>Заказать услугу</button>
         </div>
       </section>
       <section class="strengths section">
@@ -129,6 +129,7 @@
                 width="370"
                 height="294"
               />
+              <p class="about-item-title">Десктопные приложения</p>
             </li>
             <li class="about-item">
               <img
@@ -137,6 +138,7 @@
                 width="370"
                 height="294"
               />
+              <p class="about-item-title">Мобильные приложения</p>
             </li>
             <li class="about-item">
               <img
@@ -145,6 +147,7 @@
                 width="370"
                 height="294"
               />
+              <p class="about-item-title">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -420,5 +423,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-btn" data-modal-close>
+          <svg class="modal-close-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>        
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
