fixed.width size - no scroll

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header page-header--fixed" data-page-header>
       <div class="container">
         <!--navigation link-->
         <nav class="header-nav">
